final check up to results

--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -9,7 +9,7 @@ In order to understand the effect of phosphorylation at Y11, we took two approac
 
 \section{NMR}
 
-NMR experiments were done by collaborators in the Department of Chemistry at McGill on the WT and YD forms of the \gct. Through protein NMR spectroscopy we are able to obtain accurate \vitro measurements of the structural and dynamic properties of polypeptides. Among these are secondary structure state, dynamic conformational changes, and structural properties such as diffusion rates. Given that the \gct is intrinsically disordered and therefore highly dynamic, this makes NMR a particularly well suited to this problem. Diffusion measurements show that the major conformation of both forms corresponds to that of a collapsed polypeptide. By computing the effective hydrodynamic radius of the polypeptides using the Stokes-Einstein ~\ref{eq:stokes} we can compare the compactness of the \gct to other known structures. The for WT we obtain \diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}, $r = \SI{14.2}{\angstrom} \pm 0.2$ and \diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}, $r = \SI{15.6}{\angstrom} \pm 0.2$ for the YD mutant. Both are close to the hydrodynamic radius of the folded fibronectin binding protein D3 ($r = \SI{14.9}{\angstrom}$) ~\cite{wilkins1999hydrodynamic} and well under the predicted Stokes radius of an extended 39 amino acid chain \todo{ref nmr fig}. This is a surprising finding given the high content of negatively charged residues (15 of 39 residues) in both forms would be expected to promote open conformations. However, because that the \gct also has a relatively high number of hydrophobic residues (14/39), it is likely that there are other forces, such as the hydrophobic effect, acting on the packing of the peptide. We also note that the YD has a slightly higher Stokes radius than the YD suggesting some shifts in conformational sampling that are absent in the WT. Chemical shift secondary structure predictions show that both forms occupy a disordered random coil state and do not show evidence of adopting any secondary structure domains \todo{ref appendix}. Therefore, we do not observe any disorder-order transitions which are common in functionally-coupled phosphorylated IDPs. However, relaxation-dispersion experiments, which detect changes in the chemical environment of residues on the micro-millisecond timescale, show that the Y11D mutant undergoes large coordinated transitions between two states, while the WT dispersion profile is flat. The two states explored by the mutant are calculated to exchange between a major state populated to 97.5 \% and a minor state populated to 2.5\% with an exchange rate of \SI{2252}{\sec^{-1}}. Combining the dispersions brought about by the YD mutation with the shift in global \diffusion to more open conformations, we hypothesize that the YD mutation induces collective motions between a collapsed major state and an extended minor state. 
+NMR experiments were done by collaborators in the Department of Chemistry at McGill on the WT and YD forms of the \gct. Through protein NMR spectroscopy we are able to obtain accurate \vitro measurements of the structural and dynamic properties of polypeptides. Among these are secondary structure state, dynamic conformational changes, and structural properties such as diffusion rates. Given that the \gct is intrinsically disordered and therefore highly dynamic, this makes NMR a particularly well suited to this problem. Diffusion measurements show that the major conformation of both forms corresponds to that of a collapsed polypeptide \figref{fig:nmr_diffusion}. By computing the effective hydrodynamic radius of the polypeptides using the Stokes-Einstein ~\ref{eq:stokes} we can compare the compactness of the \gct to other known structures. For WT we obtain \diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}, $r = \SI{14.2}{\angstrom} \pm 0.2$ and \diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}, $r = \SI{15.6}{\angstrom} \pm 0.2$ for the YD mutant. Both are close to the hydrodynamic radius of the folded fibronectin binding protein D3 ($r = \SI{14.9}{\angstrom}$) ~\cite{wilkins1999hydrodynamic} and well under the predicted Stokes radius of an extended 39 amino acid chain \figref{fig:nmr_diffusion}. This is a surprising finding given the high content of negatively charged residues (15 of 39 residues) in both forms would be expected to promote open conformations. However, because that the \gct also has a relatively high number of hydrophobic residues (14/39), it is likely that there are other forces, such as the hydrophobic effect, acting on the packing of the polypeptide. We also note that the YD has a slightly higher Stokes radius than the WT suggesting some shifts in conformational sampling that are absent in the WT. Chemical shift secondary structure predictions show that both forms occupy a disordered random coil state and do not show evidence of adopting any secondary structure domains \figref{fig:nmr_ss}. Therefore, we do not observe any disorder-order transitions which are common in functionally-coupled phosphorylated IDPs. However, relaxation-dispersion experiments, which detect changes in the chemical environment of residues on the micro-millisecond timescale, show that the Y11D mutant undergoes large coordinated transitions between two states, while the WT dispersion profile is flat \figref{fig:nmr_r2}. The two states explored by the mutant are calculated to exchange between a major state populated to 97.5 \% and a minor state populated to 2.5\% with an exchange rate of \SI{2252}{\sec^{-1}}. Combining the dispersions brought about by the YD mutation with the shift in global \diffusion to more open conformations, we hypothesize that the YD mutation induces collective motions between a collapsed major state and an extended minor state. 
 
 In this work we use MD simulations of both \gct forms to gain further insight into the transition hypothesized by NMR.  
 
@@ -130,7 +130,7 @@ We therefore focus our attention on the two first major modes of motion. \figref
 	\label{fig:pca}
 \end{figure}
 
-In order to visualize the transitions, we generate a porcupine plot depicting the direction of motion between conformations on two extremes of the second principal component projection \figref{fig:porcupine}.  We show that the transition between collapsed and extended is indeed driven by a separation of the N and C terminus in a correlated fashion. \todo{cosine content} With this analysis we are able to propose a physical mechanism to explain the concerted global dynamics and diffusion coefficient shift observed in NMR as the action of correlated motions brought about by a local change in electrostatic environment. 
+In order to visualize the transitions, we generate a porcupine plot depicting the direction of motion between conformations on two extremes of the second principal component projection \figref{fig:porcupine}.  We show that the transition between collapsed and extended is indeed driven by a separation of the N and C terminus in a correlated fashion. With this analysis we are able to propose a physical mechanism to explain the concerted global dynamics and diffusion coefficient shift observed in NMR as the action of correlated motions brought about by a local change in electrostatic environment. 
 
 %When choosing which component to use for the visualization we computed cosine content values of each projection. This has been shown to be an effective method for detecting the presence of diffusion in signals from trajectories which often dominate the first few eigenvectors. The only component with significantly high cosine content was the first principal component of the YD simulation and so we focus our attention on projections along the second component.
 
@@ -140,10 +140,19 @@ In order to visualize the transitions, we generate a porcupine plot depicting th
 \label{fig:porcupine}
 \end{figure}  
 
+\begin{figure}
+	\centering     %%% not \center
+	\subfigure[Porcupine Plot]{\label{fig:porc}\includegraphics[height=0.4\textheight]{yd_porcupine}}
+	\subfigure[YD Contact Maps]{\label{fig:extremecontact}\includegraphics[height=0.4\textheight]{extremes_yd_contacts}} 
+	\FigureCaption{Extreme projection along opening-closing axis.}{\figref{fig:porc} Arrows indicate direction of motion along opening/closing axis from YD PCA where the purple cloud represents the most extreme projection along the axis. \figref{fig:extremecontact} Contact maps of the minimal (top triangle) and maximal (bottom triangle) projections along open/close axis show separation of N and C terminus. }
+	\label{fig:porcupine}
+\end{figure}
+
+
 
 \subsection{Whole protein simulations and conserved properties of \gct}
 
-Our analysis of \gct structural properties using NMR and corresponding MDS are based on the WT and Y11D \gct polypeptides in isolation. In order to determine whether the conformations and dynamics we observed for the isolated \gct are physically consistent when attached to the full-length \tub protein, we docked the minimum \diffusion \gct model \figref{fig:globular} onto the globular domain of an S.c. \tub homology model as an initial structure for a whole protein simulation. Due to the substantial increase in system size, simulation times were reduced to 200ns.  Despite the shorter simulation time, with the Y11D \gct polypeptide, the \gct in the whole protein simulation underwent exchange between extended and compact conformations \figref{fig:globular}, suggesting both states are still accessible in the presence of the globular domain. We found no contacts between residues in the globular domain with the 39 residues of the \gct throughout the 200 ns simulation (minimal distance between any pair of residues is > 0.7 nm) \todo{glob contact maps}. Structures for the full protein with the \gct at minimum radius of gyration (1.073 nm; model S11) and maximum radius of gyration (1.582 nm) are shown in Fig. 9A. This suggests that the \gct opening-closing mechanism can act independently of the rest of the protein.
+Our analysis of \gct structural properties using NMR and corresponding MDS are based on the WT and Y11D \gct polypeptides in isolation. In order to determine whether the conformations and dynamics we observed for the isolated \gct are physically consistent when attached to the full-length \tub protein, we docked the minimum \diffusion \gct model \figref{fig:globular} onto the globular domain of an S.c. \tub homology model as an initial structure for a whole protein simulation. Due to the substantial increase in system size, simulation times were reduced to 200ns.  Despite the shorter simulation time, with the Y11D \gct polypeptide, the \gct in the whole protein simulation underwent exchange between extended and compact conformations \figref{fig:globular}, suggesting both states are still accessible in the presence of the globular domain. We found no contacts between residues in the globular domain with the 39 residues of the \gct throughout the 200 ns simulation (minimal distance between any pair of residues is > 0.7 nm) \figref{fig:glob_contacts}. Structures for the full protein with the \gct at minimum radius of gyration (1.073 nm; model S11) and maximum radius of gyration (1.582 nm) are shown in \figref{fig:globular}. This suggests that the \gct opening-closing mechanism can act independently of the rest of the protein.
 
 
 
@@ -158,7 +167,7 @@ Our analysis of \gct structural properties using NMR and corresponding MDS are b
 \end{figure}
 
 
-Finally, we obtain evolutionary evidence that the physical mechanism of the \gct described here is likely present in many other organisms, and that it is not akin to other tubulin tails.  We used the \texttt{MUSCLE} alignment tool \cite{edgar2004muscle} to generate multiple sequence alignments from sets of 71 $\beta$ and 85 $\gamma$- CTs primary sequences spanning various eukaryotic kingdoms from the UniProt database ~\cite{apweiler2004uniprot} \figref{fig:alignment}.  We see from the resulting alignments that both CTs are enriched in acidic residues (Asp, Glu). Whereas \gct across eukaryotes additionally contain clusters of hydrophobic or polar residues which are not found in $\alpha$- or $\beta$-CTs. Interestingly, the residues most broadened in Y11D NMR spectra, i.e. those most affected by the compact-to-extended transition (V15, D19, E20, A32, G34), are all found in positions conserved either on a sequence level or on a physical property level (polarity/charge) in the consensus \gct sequence. We therefore hypothesize that clusters of hydrophobic residues, including those that contribute to transitions between compact and extended conformations in the S.c. Y11 \gct, are a conserved feature of an otherwise diverse set of \gct s across many eukaryotic organisms. This feature appears to be absent in the well characterized $\beta$-CT "e-hook" domains which suggests that the \gct mechanism does not behave like its orthologues. \todo{talk about beta} Furthermore, given that the Y11 position is so pervasively conserved, it is likely that this mechanism of action is used by many other eukaryotes.
+Finally, we obtain evolutionary evidence that the physical mechanism of the \gct described here is likely present in many other organisms, and that it is not akin to other tubulin tails.  We used the \texttt{MUSCLE} alignment tool \cite{edgar2004muscle} to generate multiple sequence alignments from sets of 71 $\beta$ and 85 $\gamma$- CTs primary sequences spanning various eukaryotic kingdoms from the UniProt database ~\cite{apweiler2004uniprot} \figref{fig:alignment}.  We see from the resulting alignments that both CTs are enriched in acidic residues (Asp, Glu). Whereas \gct across eukaryotes additionally contain clusters of hydrophobic or polar residues which are not found in $\alpha$- or $\beta$-CTs. Interestingly, the residues most broadened in Y11D NMR spectra, i.e. those most affected by the compact-to-extended transition (V15, D19, E20, A32, G34), are all found in positions conserved either on a sequence level or on a physical property level (polarity/charge) in the consensus \gct sequence. We therefore hypothesize that clusters of hydrophobic residues, including those that contribute to transitions between compact and extended conformations in the S.c. Y11 \gct, are a conserved feature of an otherwise diverse set of \gct s across many eukaryotic organisms. This feature appears to be absent in the well characterized $\beta$-CT \lq e-hook\rq IDRs which suggests that the \gct mechanism does not behave like its orthologous tubulin tails. MD simulations of the $\beta$-tubulin CTs suggest an extended ground state, unlike the collapsed ground state observed in \gct ~\cite{luchko2008conformational}.   Furthermore, given that the Y11 position is so pervasively conserved, it is likely that a similar mechanism of action to the one described in this work functions many other eukaryotes.
 
 \begin{figure}
 \centering
@@ -183,7 +192,7 @@ Both NMR and MD are in strong agreement that the conformational sampling of the 
 \label{fig:wells}
 \end{figure}
 
-From these findings we propose that phosphorylation at Y11 of the \gct acts as a regulatory switch to modulate protein-protein interactions. In order to better visualize this mechanism, we dock 3D structures obtained from full \tub simulations into cryo electron microscopy models of the $\gamma$-TuRC ~\cite{kollman2015ring} \figref{fig:turc} which previously lacked any information on the \gct due to its disordered nature. Based on this visualization we can propose a mechanism to explain the phenotype of hyper-stable microtubules in the Y11D mutants in vivo. The extensions that project outward from the complex brought about by the YD substitution, or phosphorylation, allow the $\gamma$-TuRC to selectively recruit effector proteins to the minus end of microtubules, making them available to the entire complex to subsequently act in regulating microtubule dynamics. The constitutive addition of negative charge in the YD mutant therefore shifts the equilibrium between the collapsed and extended states, leading to a misregulation of the recruitment of microtubule associated proteins and thus a defect in microtubule dynamics. The identity of the  protein(s) being recruited by the \gct remains an open question but there are several candidates known to affect microtubule stability and localize to the spindle poles \todo{which candidates} are currently being verified through various experimental screens. However, the characterization of \gct conformational sampling  is an essential fist step and a useful tool in identifying these potential interactors and understanding the complex mechanisms by which IDRs regulate large molecular machines.
+From these findings we propose that phosphorylation at Y11 of the \gct acts as a regulatory switch to modulate protein-protein interactions. In order to better visualize this mechanism, we dock 3D structures obtained from full \tub simulations into cryo electron microscopy models of the $\gamma$-TuRC ~\cite{kollman2015ring} \figref{fig:turc} which previously lacked any information on the \gct due to its disordered nature. Based on this visualization we can propose a mechanism to explain the phenotype of hyper-stable microtubules in the Y11D mutants in vivo. The extensions that project outward from the complex brought about by the YD substitution, or phosphorylation, allow the $\gamma$-TuRC to selectively recruit effector proteins to the minus end of microtubules, making them available to the entire complex to subsequently act in regulating microtubule dynamics. The constitutive addition of negative charge in the YD mutant therefore shifts the equilibrium between the collapsed and extended states, leading to a misregulation of the recruitment of microtubule associated proteins and thus a defect in microtubule dynamics. The identity of the  protein(s) being recruited by the \gct remains an open question but there are several candidates known to affect microtubule stability and localize to the spindle poles ~\cite{cuschieri2006gamma} are currently being verified through various experimental screens. However, the characterization of \gct conformational sampling  is an essential fist step and a useful tool in identifying these potential interactors and understanding the complex mechanisms by which IDRs regulate large molecular machines.
 
 \begin{figure}
 \centering
