--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -714,6 +714,17 @@
   publisher={Nature Publishing Group}
 }
 
+@article{luchko2008conformational,
+  title={Conformational analysis of the carboxy-terminal tails of human $\beta$-tubulin isotypes},
+  author={Luchko, Tyler and Huzil, J Torin and Stepanova, Maria and Tuszynski, Jack},
+  journal={Biophysical journal},
+  volume={94},
+  number={6},
+  pages={1971--1982},
+  year={2008},
+  publisher={Elsevier}
+}
+
 @article{boschitsch2002fast,
   title={Fast boundary element method for the linear Poisson-Boltzmann equation},
   author={Boschitsch, Alexander H and Fenley, Marcia O and Zhou, Huan-Xiang},
@@ -734,4 +745,15 @@
   pages={2754--2759},
   year={2005},
   publisher={National Acad Sciences}
+}
+
+@article{waterhouse2009jalview,
+  title={Jalview Version 2—a multiple sequence alignment editor and analysis workbench},
+  author={Waterhouse, Andrew M and Procter, James B and Martin, David MA and Clamp, Mich{\`e}le and Barton, Geoffrey J},
+  journal={Bioinformatics},
+  volume={25},
+  number={9},
+  pages={1189--1191},
+  year={2009},
+  publisher={Oxford Univ Press}
 }
