--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -84,8 +84,8 @@
 \Dedication%
 
 \SetAcknowledgeName{\MakeUppercase{Acknowledgements}}%
-\SetAcknowledgeText{I give my sincere thanks to my supervisor Dr. Jackie Vogel for her support and mentorship throughout my Master's, and for sharing with me her passion for the complexity of life. I thank my colleagues in the Vogel lab for their friendship, guidance and useful discussions. I would also like to acknowledge the generous financial support from the Cellular Dynamics of Mollecular Complexes fellowship and Dr. Vogel's grants from the	Canadian Institutes for	Health Research and the National Institutes of Health. I thank the Guillimin support team for their invaluable technical help in working with the Calcul Qu\'ebec compute clusters. Thank you to Roman Sarrazin Gendron for editing the French abstract. I also thank Vladimir Reinharz for his help in with computational problems, and for all the enriching discussions.
-	\newline \indent  I would like to express my deepest gratitude to all those whom I am so fortunate to call my friends and loved ones. To my brother, whose friendship means everything. To my father for his care and support. And to my mother; for being there for me every day, in every way despite it all, for being my role model and my best friend.}%
+\SetAcknowledgeText{I give my sincere thanks to my supervisor Dr. Jackie Vogel for her support and mentorship throughout my Master's, and for sharing with me her passion for the complexity of life. I thank my colleagues in the Vogel lab for their friendship, guidance and useful discussions. I would also like to acknowledge the generous financial support from the Cellular Dynamics of Mollecular Complexes fellowship and Dr. Vogel's grants from the	Canadian Institutes for	Health Research and the National Institutes of Health. I thank the Guillimin support team for their invaluable technical help in working with the Calcul Qu\'ebec compute clusters. I would like to thank Roman Sarrazin Gendron for editing the French abstract. I also thank Vladimir Reinharz for his kind help with computational problems, and for all the enriching discussions.
+	\newline \indent  I would like to express my deepest gratitude to all those whom I am so fortunate to call my friends and loved ones. To my brother, whose friendship means everything. To my father for his care and support. And to my mother; for being there for me every day, in every way; for being my role model, and my best friend.}%
 \Acknowledge%
 
 \SetContributionName{\MakeUppercase{Contribution of Authors}}%
@@ -97,7 +97,7 @@
 %%         English Abstract                        %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \SetAbstractEnName{\MakeUppercase{Abstract}}%
-\SetAbstractEnText{With recent advances in experimental and computational methods in structural biology, it is becoming increasingly clear that protein function is not only dependent on stable architectures, but equally so on the absence of well-ordered domains. These elements, also known as intrinsically disordered proteins (IDPs) or regions (IDRs) are protein chains that do not adopt organized three dimensional structures, but have nonetheless been shown to be highly functional. Instead, due to their flexible backbones, IDPs/IDRs are able to explore a large ensemble of conformations, resulting in an expansion of the functional repertoire of proteins. The cell harnesses this flexibility by targeting IDRs for post-translational modifications (PTMs) such as phosphorylation. Altering the conformational sampling of IDRs through PTMs, serves as a tool for functional control and signal integration. This paradigm is crucial for ensuring the proper execution of complex cellular processes that involve a large number of multi-tasking proteins that need to act in a coordinated manner. However, the physical mechanisms linking IDRs to functional output remain largely unknown. In this work, we study the role of phosphorylation in the assembly of the mitotic spindle which effects chromosome segregation during cell division. Phosphorylation at Tyrosine 11 (Y11) in the intrinsically disordered C-terminus of \tub (\gct) has been shown to control key aspects of the assembly of microtubules in the mitotic spindle. Phosphomimicking mutation of Tyr to Asp (Y11D) leads to a temperature sensitive growth phenotype and an overbuilt spindle in budding yeast. Through Molecular Dynamics computer simulations (MD) and Nuclear Magnetic Resonance spectroscopy (NMR) we show that non-phosphomimicking and phospho-mimicking states of the \gct primarily sample disordered and collapsed conformations. However, the phosphomimicking (Y11D) mutant undergoes switch-like collective motions to an extended but also disordered state. We propose that this transition serves to control the binding of proteins involved in shaping microtubule dynamics. This is the first observation of switch-like behaviour in IDRs/IDPs where both states are disordered, making this a novel physical mechanism of control in with the potential to regulate cellular function.}
+\SetAbstractEnText{With recent advances in experimental and computational methods in structural biology, it is becoming increasingly clear that protein function is not only dependent on stable architectures, but equally so on the absence of well-ordered domains. These elements, also known as intrinsically disordered proteins (IDPs) or regions (IDRs) are protein chains that do not adopt organized three dimensional structures, but are highly functional nonetheless. Due to their flexible backbones, IDPs/IDRs are able to explore a large ensemble of conformations and functions. The cell harnesses this flexibility by targeting IDRs for post-translational modifications (PTMs) such as phosphorylation. Altering the conformational sampling of IDRs through PTMs, serves as a useful  tool for functional control and signal integration. This paradigm is crucial for ensuring the proper execution of complex cellular processes that involve a large number of multi-tasking proteins that need to act in a coordinated manner. However, the physical mechanisms linking IDRs to functional output remain largely unknown. In this work, we study the role of phosphorylation in the assembly of the mitotic spindle, which effects chromosome segregation during cell division. Phosphorylation at Tyrosine 11 (Y11) in the intrinsically disordered C-terminus of \tub (\gct) has been shown to control key aspects of the assembly of microtubules in the mitotic spindle. {\it in vivo}, the phosphomimicking mutation of Tyr to Asp (Y11D) leads to a temperature sensitive growth phenotype and an overbuilt spindle in budding yeast. Through Molecular Dynamics computer simulations (MD) and Nuclear Magnetic Resonance spectroscopy (NMR) we show that non-phosphomimicking and phospho-mimicking states of the \gct primarily sample disordered and collapsed conformations. However, the phosphomimicking (Y11D) mutant undergoes switch-like collective motions to an extended but also disordered state. We propose that this transition serves to control the binding of proteins involved in shaping microtubule dynamics. This is the first observation of switch-like behaviour in IDRs/IDPs where both states are disordered, making this a novel physical mechanism of control with the potential to regulate cellular function.}
 
 \AbstractEn%
 
@@ -105,7 +105,8 @@
 %%         French Abstract                         %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \SetAbstractFrName{\MakeUppercase{ABR\'{E}G\'{E}}}%
-\SetAbstractFrText{De r\'ecents progr\`es dans les m\'ethodologies experimentales et informatiques de la biologie structurale d\'emontrent que la foncion des prot\'eines ne d\'epend pas uniquement sur les architectures tridimensionelles stables des prot\'eines, mais aussi sur l'absence de la structure. Les \'elements d\'epourvus de structure, aussi appel\'es prot\'eines ou r\'egions intrinsiquement d\'esordonn'es (PID, RID) sont des chaines proteine\'es qui n'adoptent pas d'architectures organis\'es mais sont toutefois fonctionelles. Gr\^ace \`a leur squelette flexible, les PID/RID, peuvent explorer une vaste gamme de conformations et fonctions. La cellule exploite cette flexibilit\'e en ciblant les RID pour des modifications post-traductionnelles (MPT) comme la phosphorylation. L'alt\'eration du balayage conformationnel des RID par les MPT est un outil pour le contr\^ole fonctionnel et l'integration des signaux cellulaires. Cet paradigme est essentiel pour assurer l'ex\'ecution correcte des processus cellulaires qui impliquent un grand nombre des proteines \rq multi-t\^aches \lq qui doivent agir de  maniere pr\'ecise et coordonn\'e. Cependant, les m\'ecanismes physiques qui \'etablissent un lien entre les RID et les r\'esultats fonctionels sont en grande partie inconnus. Ici on pr\'esente une \'etude sur le r\^ole de la phosphorylation dans l'assemblage et organisation du fuseau mitotique, la machine mol\'eculaire qui effectue la s\'egr\'egation des chromosomes durant la division cellulaire. La phosphorylation de l'acide amin\'e tyrosine 11 (Y11) dans l'\'extremit\'e carboyxle terminale (\gct) intrinsiquement d\'esordonn\'ee contr\^ole des aspects essentiels dans l'assemblage des microtubules du fuseau mitotique. La mutation de ce site pour la, acide aspartique phosphomimetique (Y11D) provoque une sensibilit\'e \`a la temp\'erature et des d\'efauts dans l'organisation des microtubules du fuseau mitotique. En utilisant des simulations informatiques dynamique mol\'eculaire et la r\'esonance magn\'etique nucl\'eaire nous montrons que les formes non-phosphoryl\'es et phosphomimetiques du \gct balayent principalement des conformations compactes et d\'esordonn\'ees. Toutefois, la mutation Y11D entreprend des mouvements collectifs vers un \'etat mineur \'etendu et aussi d\'esordonn\'e. Nous proposons que cette transition peut s\'ervir a cont\^oler la liaison des prot\'eines qui affectent la dynamique des microtubules. Ceci est la premi\'ere observation des transitions organis\'ees dans l'ensemble de structures d\'esordonn\'ees,  ce qui propose un nouveau m\'ecanisme physique de contr\^ole avec potentiel pour r\'eguler le fonctionnement cellulaire.}%
+\SetAbstractFrText{De r\'ecents progr\`es dans les m\'ethodologies exp\'erimentales et informatiques en biologie structurelle d\'emontrent que la fonction des prot\'eines ne d\'epend pas uniquement de leur architecture tridimensionnelle stable, mais aussi de l’absence d’une telle architecture. Les \'el\'ements d\'epourvus de structure, appel\'es prot\'eines ou r\'egions intrins\`equement d\'esordonn\'ees (PID, RID), peuvent explorer une vaste gamme de conformations et de fonctions. La cellule exploite cette flexibilit\'e en ciblant les RID avec des modifications post-traductionnelles (MPT) comme la phosphorylation. L’alt\'eration de l'\'echantillonage conformationnel des RID par les MPT est un outil pour le contr\^ole fonctionnel et l’int\'egration des signaux cellulaires. Ce paradigme est essentiel pour assurer l’ex\'ecution correcte des processus cellulaires qui impliquent un grand nombre de prot\'eines multitâches devant agir de mani\`ere pr\'ecise et coordonn\'ee. Cependant, les m\'ecanismes physiques qui \'etablissent un lien entre les RID et les r\'esultats fonctionnels sont en grande partie inconnus.  Cette th\`ese pr\'esente une \'etude sur le r\^ole de la phosphorylation dans l’assemblage et l’organisation du fuseau mitotique, la machine mol\'eculaire qui effectue la s\'egr\'egation des chromosomes durant la division cellulaire. La phosphorylation de l’acide amin\'e Tyrosine 11 (Y11) \`a son extr\'emit\'e carboxy-terminale (\gct) intrins\`equement d\'esordonn\'ee contr\^ole des aspects essentiels de l’assemblage du fuseau mitotique. La mutation de cette tyrosine \`a un acide aspartique phosphomim\'etique \vivo (Y11D) provoque une sensibilit\'e \`a la temp\'erature et des d\'efauts dans l’organisation des microtubules du fuseau mitotique. En utilisant des simulations informatiques de dynamique mol\'eculaire et la r\'esonance magn\'etique nucl\'eaire, nous montrons que les formes non-phosphomim\'etiques et phosphomim\'etiques du \gct balayent toutes deux principalement des conformations compactes et d\'esordonn\'ees, mais que la mutation Y11D entreprend des mouvements collectifs occasionnels vers une conformation mineure \'etendue, elle aussi d\'esordonn\'ee. Nous sugg\'erons que cette transition peut servir \`a contr\^oler la liaison avec les prot\'eines qui affectent la dynamique des microtubules. Il s’agit de la premi\`ere observation d’une transition organis\'ee dans un ensemble de structures d\'esordonn\'ees, un nouveau m\'ecanisme physique de contr\^ole ayant le potentiel de r\'eguler le fonctionnement cellulaire.}%
+
 \AbstractFr%
 
 \TOCHeading{\MakeUppercase{Table of Contents}}%
@@ -119,7 +120,7 @@
 \index[abbr]{$\gamma$-TuRC@$\gamma$-TuRC: $\gamma$-Tubulin Ring Complex} 
 \index[abbr]{\diffusion@\diffusion: Translational Diffusion Coefficient}
 \index[abbr]{WT@WT: Wild-Type}
-\index[abbr]{YD@YD: Y445D mutant}
+\index[abbr]{YD@YD: Y445D (Y11D)mutant}
 \index[abbr]{RMSD@RMSD: Root Mean Square Displacement}
 \index[abbr]{$R_g$@$R_g$: Radius of Gyration}
 \index[abbr]{ns@ns: Nanosecond}
