--- a/methods.tex
+++ b/methods.tex
@@ -2,7 +2,7 @@
 \chapter{Theory \& Methods}
 \epigraph{Life can only be understood backwards; but it must be lived forwards.}{S{\o}ren Kierkegaard}
 
-The main technique I will use to study the behaviour of IDPs/IDRs is the computational technique of Molecular Dynamics (MD) simulations ~\cite{haile1992molecular}. Protein dynamics are shaped by various types of physical interactions acting on a high number of conformational degrees of freedom on timescales ranging from femto to milli seconds. For this reason it is difficult to predict the dynamics, or compute ensemble quantities of IDPs {\it ab initio} . MD is a brute-force approach which iteratively solves the equations of motion for every interaction in a system of atoms in 3D space.  What results is a trajectory and a velocity for every atom in the system in time which we can use to visualize the conformational sampling of our IDP of interest and compute thermodynamic quantities. While this can be a computationally demanding task, it is currently the most reliable way of studying protein conformational sampling \silico and has been succesfully applied to many biomolecular systems ~\cite{karplus2002molecular}. We will use this approach to study the conformational dynamics of two isoforms of the \gct: WT, and Y11D.
+The main technique I will use to study the behaviour of IDPs/IDRs is the computational technique of Molecular Dynamics (MD) simulations ~\cite{haile1992molecular}. Protein dynamics are shaped by various types of physical interactions, acting on many conformational degrees of freedom, and on timescales spanning femtoseconds to milliseconds. This level of complexity makes it very challenging to predict the dynamics, or compute ensemble quantities of IDPs {\it ab initio} . MD is a brute-force approach which addresses this problem by iteratively solving the equations of motion for every interaction in a system of atoms in 3D space.  What results is a trajectory and a velocity for every atom in the system in time, which we can use to visualize the conformational sampling of our IDP of interest and compute thermodynamic quantities. While this can be a computationally demanding task, it is currently the most reliable way of studying protein conformational sampling \silico and has been succesfully applied to many biomolecular systems ~\cite{karplus2002molecular}. We will use this approach to study the conformational dynamics of two isoforms of the \gct: WT, and Y11D.
 
 \section{Molecular Dynamics Simulations}
 
@@ -15,7 +15,7 @@ MD is centered on the principle that the potential energy arising from interacti
 \begin{equation}
 \vek{F_i}  = -\frac{\partial V(\vek{r_1}, \vek{r_2}, ..., \vek{r_i}, ... \vek{r_N)}}{\partial \vek{r_i}} 
  \end{equation}
- \todo{fix this}
+
  Given that the force on an atom is the result of interactions with all other atoms in the system, we obtain the force on a particular atom as the sum of the force of the interactions with all other atoms $j$ in the system,  $\vek{F_i} = \sum_{j} \vek{F_{ij}}$ Given the total force on an atom, we can compute its trajectory in space by numerically integrating Newton's equations of motion. This process is repeated and trajectories are stored and updated for the desired number of steps in the simulation.
  
  \begin{equation}
@@ -30,7 +30,7 @@ The functions for potential energy of every type of interaction in the system ar
 E_{total} = E_{bonded} + E_{non bonded}
 \end{equation}
 
-The bonded energy term can be written as the sum of energies arising from the bond itself  ($E_{bond}$)which is a function of the bond length, the potential arising from the angle formed by the bond ($E_{angle}$), as well as the torsional/dihedral angle ($E_{dihedral}$) arising from the rotation of three bonds about two intersecting planes.
+The bonded energy term can be written as the sum of energies arising from the bond itself  ($E_{bond}$) which is a function of the bond length, the potential arising from the angle formed by the bond ($E_{angle}$), as well as the torsional/dihedral angle ($E_{dihedral}$) arising from the rotation of three bonds about two intersecting planes.
 
 Non-bonded interactions can have two contributing factors; electrostatic force, and van der Waals force. The electrostatic potential ($E_{electrostatic}$) arises from the interaction of the charges of particles, while the van der Waals potential  ($E_{van der Waals}$ arises from the attraction or repulsion between uncharged groups. Combining all of these terms, we can write the full description of forces in the system as:
 
@@ -39,9 +39,9 @@ E(r_{N}) = E_{bond} + E_{angle} + E_{dihedral} + E_{van der Waals} + E_{electros
 \end{equation}
 
 
-The MD algorithm evaluates $E(r_{N})$ at every time step to obtain the force on each atom and therefore the trajectory at each time step. Given this low-level description of the system, more complex phenomena such as the hydrophobic effect and hydrogen bonding which are known to be essential to protein dynamics do not need to be coded explicitly in the models. Instead, they arise naturally from the definition of the system.
+The MD algorithm evaluates $E(r_{N})$ at every time step to obtain the force on each atom, and therefore the trajectory at each time step. Given this low-level description of the system, more complex phenomena such as the hydrophobic effect and hydrogen bonding which are known to be essential to protein dynamics do not need to be coded explicitly in the models. Instead, they arise naturally from the definition of the system.
 
-Another key component to the force field, is the definition of parameters for the different types of interactions and particles in the system. Key parameters include values for charge, mass, bond length, etc, and are obtained from experimental measurements. The force field must naturally also contain a set of definitions for the various types of atoms and functional groups it can model. Therefore, the choice of force field can have important consequences on the outcome of the simulations and must be chosen with care.
+Another key component to the force field is the definition of parameters for the different types of interactions and particles in the system. Key parameters include values for charge, mass, bond length, etc. and are obtained from experimental measurements. The force field must naturally also contain a set of definitions for the various types of atoms and functional groups it can model. Therefore, the choice of force field can have important consequences on the outcome of the simulations and must be chosen with care.
 
 In this work, we will be using the Optimized Potentials for Liquid Simulations - All Atom (OPLS-AA) force field ~\cite{jorgensen1988opls} that can be represented as:
 
@@ -73,17 +73,15 @@ Where $A$ and $C$ represent combining rules which allow us to obtain the interac
 
 We believe the OPLS-AA force field is be best fit for modeling charge-dependent motions of the \gct. Whereas other popular force fields such as CHARMM were parametrized on X-ray crystallographic experimental values of folded globular proteins, the OPLS force field was optimized with quantum chemical calculations of charged short peptides ~\cite{kukol2008molecular}. This approach is likely to more accurately model the dynamics of unfolded peptides where other force fields may tend to favour the formation of collapsed stable secondary structure motifs ~\cite{henriques2015molecular, tran2008role}. Furthermore, it has been reported that the small and localized treatment of charged groups in OPLS-AA is well suited for systems where local charge interactions drive global dynamics ~\cite{vitalis2009absinth}. We show that a simulation under OPLS-AA is able to accurately produce an extended conformation for the \lq molecular ruler \rq polyproline ~\cite{schuler2005polyproline} \figref{fig:pp}. We also control the appropriateness of the force field by comparing MD values to NMR measurements on the same system.
 
+\subsection{Preparing the system for a simulation}
 
+The starting point of an MD simulation is a force field and a set of initial atomic coordinates for the system of interest. Before a simulation can be successfully run, there are several pre-processing steps that must be executed. 
 
-\subsection{Preparing the system}
+Hydrogen bonding and the hydrophobic effect play very important roles in shaping the dynamics of polypeptides therefore, the model must include water molecules. We place the peptide atoms in a simulated box under periodic boundary conditions where water molecules are introduced to fill the remaining space. All subsequent force calculations in MD will consider solvent-solvent and solvent-peptide atomic interactions. We use an explicit water regime, meaning that all solvent atoms are modeled as discrete units in the system. While faster alternatives to this paradigm which represent the solvent with mean field behaviour, known as implicit solvent models are available, it is well documented that an explicit treatment currently provides results with the highest accuracy ~\cite{onufriev2008implicit, arnold1994evaluation, zhou2003free}. 
 
-The starting point of an MD simulation is a force field and a set of initial coordinates for the system of interest. Before a simulation can be successfully run, there are several pre-processing steps that must be executed. 
+Once the peptide is solvated, any initial steric clashes between atoms must be allowed to relax. Typically this involves executing an energy minimization algorithm which searches for atomic coordinates that minimize the forces between atoms to move the system towards an energy minimum. No minimization algorithm guarantees convergence to a global minimum in finite time on a realistic system. However, convergence to a local minimum is often sufficient to eliminate significant clashes. In this work, we use the steepest descent energy minimization algorithm implemented in GROMACS ~\cite{hess2008gromacs}. 
 
-Hydrogen bonding and the hydrophobic effect play very important roles in shaping the dynamics of polypeptides therefore, the model must include water molecules. We place the peptide atoms in a simulated box under periodic boundary conditions where water molecules are introduced to fill the remaining space. All subsequent force calculations in MD will consider solvent-solvent and solvent-peptide atomic interactions. We use an explicit water regime, meaning that all solvent atoms are modeled as discrete units in the system. While faster alternatives to this paradigm which represent the solvent with mean field behaviour, known as implicit solvent are available, it is well documented that an explicit treatment currently provides results with the highest accuracy ~\cite{onufriev2008implicit, arnold1994evaluation, zhou2003free}. 
-
-Once the peptide is solvated any initial steric clashes between atoms must be allowed to relax. Typically this involves executing an energy minimization algorithm which searches for atomic coordinates that minimizes the forces between atoms to move the system towards an energy minimum. No minimization algorithm guarantees convergence to a global minimum in finite time on a realistic system. However, convergence to a local minimum is often sufficient to eliminate significant clashes. In this work, we use the robust steepest descent energy minimization algorithm implemented in GROMACS ~\cite{hess2008gromacs}. 
-
-At this point, we could begin an MD simulation and obtain trajectories in the NVE ensemble (constant number of particles, volume, and energy). However, we are often interested in comparing results from MD to experimental measurements such as those from NMR where the system is under constant temperature and pressure. It is therefore necessary to ensure that the forces in the system don't produce large fluctuations in the pressure and temperature of the ensemble. In order to keep the temperature constant and achieve an NVT (constant number of particles, volume, and temperature) we use a thermostat. Since the temperature of a system is a function of the kinetic energy, a thermostat re-scales the velocities of the atoms in the system to achieve a given temperature. Likewise, for maintaining constant pressure, a barostat adjusts the size of the box to counteract fluctuations in pressure and thus achieving an NPT ensemble (constant number of particles, pressure, and temperature). During the equilibration step, we first let the system adjust to the desired temperature by executing a short simulation in NVT. Then under NPT we allow the system to adjust to the desired pressure. Once both equilibration simulations are complete, the system is ready for a full simulation in NPT. 
+At this point, we could begin an MD simulation and obtain trajectories in the NVE ensemble (constant number of particles, volume, and energy). However, we are often interested in comparing results from MD to experimental measurements such as those from NMR where the system is under constant temperature and pressure. It is therefore necessary to ensure that the forces in the system do not produce large fluctuations in the pressure and temperature of the ensemble. In order to keep the temperature constant and achieve an NVT sampling (constant number of particles, volume, and temperature) we use a thermostat. Since the temperature of a system is a function of the kinetic energy, a thermostat re-scales the velocities of the atoms in the system to achieve a given temperature. Likewise, for maintaining constant pressure, a barostat adjusts the size of the simulation box to counteract fluctuations in pressure and thus achieving an NPT ensemble (constant number of particles, pressure, and temperature). During the equilibration step, we first let the system adjust to the desired temperature by executing a short simulation in NVT. Then under NPT we allow the system to adjust to the desired pressure. Once both equilibration simulations are complete, the system is ready for a full simulation.
 
 \section{Trajectory Analysis}
 
@@ -108,11 +106,11 @@ R_g(\vek{r}) = \sqrt{N^{-1} \sum_{k=1}^{N} (\vek{r_k} - \vek{r_{mean}})^2}
 
 \subsection{Diffusion coefficient and Hydrodynamic Radius}
 
-Like radius of gyration, diffusion coefficient (\diffusion) and hydrodynamic radius ($R_h$) is a proxy for the compactness of a macromolecule. However, \diffusion and $R_h$ are quantities that describe the size of the molecule in the context of their solvent. Because biomolecules perform all of their function in solution, and are shaped by their interactions with the solvent, these quantities are often more informative than $R_g$.
+Like radius of gyration, diffusion coefficient (\diffusion) and hydrodynamic radius ($R_h$) is a proxy for the compactness of a macromolecule. However, \diffusion and $R_h$ are quantities that describe the size of the molecule in the context of their solvent. Because biomolecules perform all of their function in solution, and are shaped by their interactions with the solvent, these quantities are often more informative than $R_g$ for our purposes.
 
-The translational diffusion coefficeint of a macromolecule is defined as the rate at which its center of mass is able to diffuse through a solvent of given viscosity under a certain hydrodynamic model. Conformations with high diffusion rates experience rapid displacement of their center of mass, while conformations with greater viscous force with the solvent experience reduced diffusion coefficients. 
+The translational diffusion coefficeint of a macromolecule is defined as the rate at which its center of mass is able to diffuse through a solvent of a given viscosity under a certain hydrodynamic model. Conformations with high diffusion rates experience rapid displacement of their center of mass, while conformations with greater viscous force with the solvent experience reduced diffusion coefficients. 
 
-The process of computing the translational diffusion coefficient for a particular conformation is done by the software package \texttt{hydroNMR} ~\cite{de2000hydronmr}. The method of calculating the diffusion coefficient will not be discussed here in detail as it is beyond the scope of this work.. The main concept is that the software models each atom in a list of atomic coordinates, in our case obtained by MD, as a spherical bead. This chain of beads is packed into a hexagonal lattice and internal beads are removed to extract a topology of residues exposed to the solvent. From this topology, the software calculates the frictional force that a given conformation would exert on the solvent, this is contained in the translational friction tensor $\Xi$. The following expression gives us the translational diffusion tensor $\vek{D_t}$.
+The process of computing the translational diffusion coefficient for a particular conformation is done by the software package \texttt{hydroNMR} ~\cite{de2000hydronmr}. The method of calculating the diffusion coefficient will not be discussed here in detail as it is beyond the scope of this work. The main concept is that the software models each atom in the system, in our case a trajectory obtained by MD, as a spherical bead. The resulting chain of beads is packed into a hexagonal lattice and internal beads are removed to extract a topology of residues exposed to the solvent. From this topology, the software calculates the frictional force that a given conformation would exert on the solvent, this quantity is contained in the translational friction tensor $\Xi$. The following expression gives us the translational diffusion tensor $\vek{D_t}$.
 
 \begin{equation}
 \vek{D_{t}} = k_BT\Xi_{t}^{-1}
@@ -124,7 +122,7 @@ Where $k_B$ is the Boltzmann constant (\SI{1.380e-23}{\square\metre\kilo\gram\pe
 D_t = \frac{1}{3}tr(\vek{D_t})
 \end{equation}
 
-Knowing \diffusion, we can use the Stokes-Einstein equation to obtain an expression for the effective hydrodynamic radius which measures the diffusion of spherical particles.
+Knowing \diffusion, we can use the Stokes-Einstein equation to obtain an expression for the effective hydrodynamic radius which measures the diffusion of spherical particles in solvent.
 
 \begin{equation}
 R_h = \frac{k_{B}T}{6\pi \eta D_{t}}
@@ -134,9 +132,9 @@ Where $R_h$ is the hydrodynamic radius and $\eta$ is the viscosity of the solven
 
 \subsection{Covariance Analysis}
 
-When analyzing MD trajectories, we are often interested in observing collective motions. This is because global motions are likely to be involved in some functional mechanism. However, molecular trajectories typically feature complex motions along many axes and time scales which can often make it difficult to detect coordinated motions. For example, local rearrangements, vibrations, rotations, and random diffusion are examples of non-coordinated motions that likely do not contribute to a functional mechanism. The goal in MD trajectory covariance analysis is to obtain the axes of motion where atoms in the peptide of interest show a high degree of correlation which could be indicative of a global coordinated motion. 
+When analyzing MD trajectories, we are often interested in observing coordinated, or correlated motions. This is because global motions are likely to be involved in some functional mechanism. However, molecular trajectories typically feature complex motions along many axes and time scales which can often make it difficult to detect coordinated motions. Local rearrangements, vibrations, rotations, and random diffusion are examples of non-coordinated motions that likely do not contribute to a functional mechanism. The goal in MD trajectory covariance analysis is to obtain the axes of motion where atoms in the peptide of interest show a high degree of correlation which could be indicative of a global coordinated motion. 
 
-Covariance analysis, or principal component analysis is a mathematical tool which isolates principal axes, or components of motion by computing the covariance between atoms at every time point in the simulation. We compute the covariance for all $N$ atoms in $3$ dimensions, resulting in a covariance matrix of size $3N$.
+Covariance analysis, or principal component analysis is a mathematical tool which isolates principal axes, or components of correlated motion by computing the covariance between atoms at every time point in the simulation. We compute the covariance for all $N$ atoms in $3$ dimensions, resulting in a covariance matrix of size $3N$.
 
 \begin{equation}
 C_{ij} = \bigg\langle M_{ii}^{\frac{1}{2}} (\vek{x_i}(t) - \langle \vek{x_i}(t) \rangle) M_{jj}^{\frac{1}{2}} (\vek{x_j}(t) - \langle \vek{x_j}(t) \rangle) \bigg\rangle
@@ -150,7 +148,7 @@ R^{T}CR = diag(\lambda_1, \lambda_2, ... \lambda_{3N}) \text{\qquad where \quad}
 
 Where R is the transformation matrix whose columns contain an eigenvector. Using this matrix to diagonalize C, we get a diagonalized C containing the set of eigenvalues $\lambda_i$ for every eigenvector in R along its main diagonal. The magnitude of the eigenvalue tells us the amount of variance captured by its corresponding eigenvector and can thus be used to guide our projection toward the major axes of motion.
 
-If we wish to visualize the system's motions along a particular axis and filter out motions along other axes, we can project the coordinates of each atom along an eigenvector. We can the following transformation to obtain the new set of coordinates $\vek{p}(t)$.
+If we wish to visualize motions along a particular axis and filter out motions along other axes, we can project the coordinates of each atom along a specific eigenvector. We can use following transformation to obtain the new set of coordinates $\vek{p}(t)$.
 
 \begin{equation}
 \vek{p}(t) = R^{T}M^{\frac{1}{2}}\vek{x}(t)
